# wallpaper

./: CMakeLists.txt  Dockerfile
src/: wallpaper.cpp
